fix home : images align left

--- a/themes/bleu-lumiere/css/style.css
+++ b/themes/bleu-lumiere/css/style.css
@@ -664,6 +664,7 @@ article h1 a, article h2 a, article h3 a, article h4 a, article h5 a {
 article hr {
   margin: 2.25rem 0 2.1875rem;
 }
+
 article .featured-image img {
   width: 500px;
   float: right;
@@ -683,6 +684,27 @@ article .featured-image img {
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
+
+.home article .featured-image img {
+  width: 500px;
+  float: left;
+  border: 1px solid #EFEFEF;
+  margin-left: 2rem;
+  margin-bottom: 1rem;
+  background-clip: padding-box;
+  /* stops bg color from leaking outside the border: */
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+  -o-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
 article .featured-image img:hover {
   opacity: 0.8;
 }
